--- a/src/App.scss
+++ b/src/App.scss
@@ -787,6 +787,9 @@ body {
 						&:hover {
 							transform: scale(1.03);
 						}
+						@include breakpoint-max(v-small) {
+							display: none;
+						}
 					}
 				}
 			}
@@ -901,7 +904,6 @@ body {
 							background-color: rgba(255, 255, 255, 0.301);
 							padding: f.rem(5);
 							border-radius: f.rem(3);
-							// width: fit-content;
 						}
 						display: none;
 					}
@@ -950,6 +952,9 @@ body {
 						background-color: var(--trailer);
 						&:hover {
 							transform: scale(1.03);
+						}
+						@include breakpoint-max(v-small) {
+							display: none;
 						}
 					}
 				}
