--- a/src/App.scss
+++ b/src/App.scss
@@ -1180,6 +1180,7 @@ body {
 	.intro-section {
 		display: grid;
 		width: 100%;
+		height:f.rem(550)!important;
 
 		.container2 {
 			display: grid;
